cmake_minimum_required(VERSION 3.10)
project(problem_124_code CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Optimize for speed
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

add_executable(code main.cpp)

target_compile_options(code PRIVATE -O3 -march=native -DNDEBUG)

